# Autonomous-Driving-Algorithm

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  aiv.drawio  apollo_smooth.drawio  minimum_snap_corridor.py  temp  离散点曲线平滑原理.md
lib/: matplotlibcpp.h
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/include/: discrete_points_math.h  vec2d.h
modules/common/src/: discrete_points_math.cc  vec2d.cpp
modules/smooth/: CMakeLists.txt  README.md  main.cpp
modules/smooth/include/: fem_pos_deviation.h  fem_pos_deviation_osqp.h  fem_pos_deviation_sqp_osqp_interface.h
modules/smooth/src/: fem_pos_deviation.cpp  fem_pos_deviation_osqp.cpp  fem_pos_deviation_sqp_osqp_interface.cpp
